# JetBridgeTestTask

./: .gitignore  README.md  manage.py  pyproject.toml
JetBridgeTestTask/: asgi.py  settings.py  urls.py  wsgi.py
TestTask/: admin.py  apps.py  config.py  forms.py  models.py  urls.py  views.py
TestTask/migrations/: 0001_initial.py  0002_auto_20200607_0044.py  0003_auto_20200607_0050.py  0004_auto_20200607_1546.py  0005_auto_20200607_1551.py  0006_auto_20200607_1625.py  0007_auto_20200607_1627.py  0008_auto_20200610_1838.py  0009_auto_20200610_2019.py  0010_auto_20200610_2026.py
TestTask/static/: index.css  userList.css  userPage.css
TestTask/templates/: index.html
TestTask/templates/ViralUser/: updateUser.html  userPage.html  usersList.html
TestTask/templates/registration/: login.html  signup.html
