[tool.poetry]
name = "jetbridgetesttask"
version = "0.1.0"
description = ""
authors = ["Yaroslaw Klymenko <yaroslaw.klymko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
asgiref = "^3.2.7"
Django = "^3.0.14"
django-crispy-forms = "^1.9.1"
pytz = "^2020.1"
sqlparse = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
